# canis

apio-template/: apio.ini  canis.v  top.v
circuit/: addressSpace.dig  alu.dig  canis.dig  comparator.dig  decoder.dig  dwordToUnalignedBytes.dig  eTypeBuffer.dig  genericSplit16.dig  hexDisplayDriver.dig  interstageRegister.dig  memoryAccessTrimmer.dig  memoryWriteControl.dig  ram.dig  shiftLeft.dig  shiftRight.dig  unalignedBytesToDword.dig
sdk/: .gitignore  Cargo.toml
sdk/src/: cli.rs  lib.rs  log.rs  main.rs  smart_file.rs
sdk/src/assemble/: error.rs  labels.rs  line_span.rs  mod.rs
sdk/src/assemble/error/: annotations.rs
sdk/src/instruction/: hardware.rs  instruction.rs  mod.rs  parser.rs  raw.rs  registry.rs  types.rs
sdk/src/processes/: assemble.rs  mod.rs
sdk/src/processes/assemble/: diagnostics.rs  instruction.rs  line_span.rs  parser.rs
sdk/src/processes/assemble/instruction/: hardware.rs
